--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "watch": "json-server --watch db.json"
+    "watch": "json-server --watch db.json",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -14,7 +16,8 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "json-server": "^0.12.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
